[project]
name = "gulls-lighthouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "joblib>=1.5.0",
    "jupyter>=1.1.1",
    "jupytext>=1.17.1",
    "matplotlib>=3.10.1",
    "nbqa>=1.9.1",
    "numpy>=2.2.5",
    "ruff>=0.11.8",
    "scipy>=1.15.2",
    "sympy>=1.14.0",
]
